# sukima

./: .gitignore  CMakeLists.txt  Makefile  README.md  cons.c  eval.c  fibo.lisp  hash.c  lex.c  lisp.c  lisp.h  p1.lisp  p3.lisp  p4.lisp  parser.c  plus.lisp  runtime.c  stack.c  test.sh  vm.c
include/: codegen.h  lisp.h  nanbox.h  parser.h  sukima.h
src/: codegen.c  cons.c  eval.c  excall.c  hash.c  lex.c  lisp.c  parser.c  runtime.c  vm.c
test/: bool.lisp  defun.lisp  div.lisp  fac.lisp  fibo.lisp  fibo20.lisp  fibo40.lisp  fibo5.lisp  fiz.lisp  fiz2000.lisp  i.lisp  if.lisp  minus.lisp  mul.lisp  p1.lisp  p10.lisp  p11.lisp  p2.lisp  p3.lisp  p4.lisp  p6.lisp  p7.lisp  plus.lisp  rec.lisp  setq.lisp  test.rb
